--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <link rel="stylesheet" href="./fontawesome/css/fontawesome.css">
     <link rel="stylesheet" href="css/style.css">
     <!--
       manifest.json provides metadata used when your web app is added to the
