--- a/public/index.html
+++ b/public/index.html
@@ -38,8 +38,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="../node_modules/jquery/dist/jquery.js" ></script>
-    <script src="./popper.min.js"></script>
-    <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <!--<script src="../node_modules/jquery/dist/jquery.js" ></script>-->
+    <!--<script src="./popper.min.js"></script>-->
+    <!--<script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>-->
   </body>
 </html>
